adguard/overlays/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: DNS Server
    # update the domain to whatever you use or switch to a public icon
    gethomepage.dev/icon: "sh-adguard"
    gethomepage.dev/name: Adguard
    # You can add the widget, as documented here: https://gethomepage.dev/widgets/services/adguard-home/

spec:
  rules:
  - host: adguard
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: adguard
              port:
                name: http
